--- a/client/src/modules/MyStory.modules.css
+++ b/client/src/modules/MyStory.modules.css
@@ -6,10 +6,10 @@
     width: 100%;
     background: whitesmoke;
     overflow: scroll;
-    z-index: 280;
     justify-items: center;
     justify-self: center;
     margin-top: 70px;
+    z-index: 13;
 
 
 }
@@ -19,6 +19,8 @@
     z-index: 90;
     padding-top: 20px;
     row-gap: 20px;
+    background: whitesmoke;
+    z-index: 14;
 
 }
 
@@ -62,10 +64,17 @@
 }
 
 /* review  */
-/* .myStory-container aside ul li:last-child {
-    background: red;
-    margin-bottom: 300px;
-} */
+
+@media screen and (max-width: 1100px){
+.myStory-container aside ul li:last-child {
+    background: none;
+    border: none;
+    box-shadow: none;
+    height: 100px;
+}
+
+
+}
 
 .myStory-container aside ul li img{
     width: 100%;
@@ -121,7 +130,7 @@
 
 
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1100px) {
     .myStory-container{
     position: relative;
     column-gap: 30PX;
@@ -132,40 +141,7 @@
 
     }
 
-    .myStory-container aside ul li:first-of-type{
-        display: none;
-        background: red;
-        box-shadow: none;
-        grid-row: 1/2;
-        grid-column: 1/3;
-        width: 750px;
-    }
 
-    .myStory-container aside ul li:last-of-type{
-        display: none;
-        background: gold;
-        box-shadow: none;
-        grid-row: 2/3;
-        grid-column: 1/3;
-        width: 750px;
-
-    }
-/* 
-
-    .leftPillar{
-        background: blue;
-        height: 750px;
-        grid-row: 1/3;
-        grid-column: 1/2;
-        width: 360px;
-    }
-
-    .rightPillar{
-        background: green;
-        grid-row: 1/3;
-        grid-column: 2/3;
-        width: 360px;
-    } */
 
     .stage1{
         background: white;
